{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 71,
  "lineage": "3598def2-2ea2-77d3-1a4e-cfb1c3c876c3",
  "resources": [
    {
      "module": "module.EC2-Module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_web",
      "provider": "module.EC2-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fd63e471b04e22d0",
            "arn": "arn:aws:ec2:us-east-1:119271017483:instance/i-01004da809055b0a5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01004da809055b0a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yay",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b94564bbaed0f89",
            "private_dns": "ip-100-64-3-214.ec2.internal",
            "private_ip": "100.64.3.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fc57704a76b8cbef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0674fde37918883e1",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0250c1195c0b2f467"
            ]
          },
          "dependencies": [
            "module.EC2-Module.data.aws_ami.ubuntu",
            "module.VPC-Module.aws_subnet.private_subnet",
            "module.VPC-Module.aws_vpc.scott_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-Module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_web",
      "provider": "module.EC2-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fd63e471b04e22d0",
            "arn": "arn:aws:ec2:us-east-1:119271017483:instance/i-0a6d71dae13c623d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6d71dae13c623d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yay",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0af6fbbbcbc78d6c0",
            "private_dns": "ip-100-64-0-236.ec2.internal",
            "private_ip": "100.64.0.236",
            "public_ip": "34.224.23.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa87d9c8f370c75f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0359be567c7e9cccc",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008280f42dc91d7ac"
            ]
          },
          "dependencies": [
            "module.EC2-Module.data.aws_ami.ubuntu",
            "module.SG-Module.aws_security_group.web-sg",
            "module.VPC-Module.aws_subnet.public_subnet",
            "module.VPC-Module.aws_vpc.scott_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG-Module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "module.SG-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119271017483:security-group/sg-008280f42dc91d7ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008280f42dc91d7ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Terraform-sg",
            "name_prefix": "",
            "owner_id": "119271017483",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08cdc1e33a365b728"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-Module.aws_vpc.scott_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.VPC-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119271017483:internet-gateway/igw-0eb6b1330007a1568",
            "id": "igw-0eb6b1330007a1568",
            "owner_id": "119271017483",
            "tags": {
              "Name": "scott-igw"
            },
            "tags_all": {
              "Name": "scott-igw"
            },
            "vpc_id": "vpc-08cdc1e33a365b728"
          },
          "dependencies": [
            "module.VPC-Module.aws_vpc.scott_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT_new_vpc",
      "provider": "module.VPC-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119271017483:route-table/rtb-0e4c3bbf1639f697e",
            "id": "rtb-0e4c3bbf1639f697e",
            "owner_id": "119271017483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb6b1330007a1568",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Scott-routes"
            },
            "tags_all": {
              "Name": "Scott-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cdc1e33a365b728"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-Module.aws_internet_gateway.igw",
            "module.VPC-Module.aws_vpc.scott_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.VPC-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0702f36925b9567b0",
            "route_table_id": "rtb-0e4c3bbf1639f697e",
            "subnet_id": "subnet-0359be567c7e9cccc"
          },
          "dependencies": [
            "module.VPC-Module.aws_internet_gateway.igw",
            "module.VPC-Module.aws_route_table.public_RT_new_vpc",
            "module.VPC-Module.aws_subnet.public_subnet",
            "module.VPC-Module.aws_vpc.scott_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.VPC-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119271017483:subnet/subnet-0674fde37918883e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "100.64.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0674fde37918883e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119271017483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-1"
            },
            "tags_all": {
              "Name": "subnet-private-1"
            },
            "vpc_id": "vpc-08cdc1e33a365b728"
          },
          "dependencies": [
            "module.VPC-Module.aws_vpc.scott_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.VPC-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119271017483:subnet/subnet-0359be567c7e9cccc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "100.64.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0359be567c7e9cccc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "119271017483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-1"
            },
            "tags_all": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-08cdc1e33a365b728"
          },
          "dependencies": [
            "module.VPC-Module.aws_vpc.scott_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-Module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "scott_vpc",
      "provider": "module.VPC-Module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:119271017483:vpc/vpc-08cdc1e33a365b728",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "100.64.0.0/16",
            "default_network_acl_id": "acl-01555f2e1157986f3",
            "default_route_table_id": "rtb-06fda985eeb3f8e33",
            "default_security_group_id": "sg-0250c1195c0b2f467",
            "dhcp_options_id": "dopt-0f181734371004e5b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08cdc1e33a365b728",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06fda985eeb3f8e33",
            "owner_id": "119271017483",
            "tags": {
              "Name": "Scott-Terraform-test"
            },
            "tags_all": {
              "Name": "Scott-Terraform-test"
            }
          }
        }
      ]
    }
  ]
}